--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ pluginManagement {
       maven { url "https://splunk.jfrog.io/splunk/ext-releases-local" }
   }
 }
-rootProject.name = 'Web3App';
+rootProject.name = 'Enscribe';
